# r1cs_gadgets2

./: Cargo.toml
src/: lib.rs  r1cs_utils.rs
tests/: lin_com_basic (copy).rs  lin_com_basic.rs  lin_com_basic2.rs  risk_gadget.rs
